bat.string1.lessons.bat.string1.StringSplosion.scala.error
stringSplosion:8: error: ')' expected but '}' found.
	}
        ^